# Hubble

./: CMakeLists.txt  README.md
inc/: AST.hpp  codeGenerator.hpp  common.h  lexer.hpp  llvm.h  parser.hpp  topParser.hpp
scripts/: MandelbrotScript.txt  PrintAllHelp.txt  README.md  SimpleArithmetic.txt  SimpleForLoops.txt  SimpleFunctions.txt  SimpleIRTests.txt  SimpleIfThenElse.txt  Simple_For_Loops.txt  Simple_Functions.txt  Simple_IR_Tests.txt
src/: codeGenerator.cpp  lexer.cpp  main.cpp  parser.cpp  topParser.cpp
